--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,8 +1,5 @@
-# This is an example goreleaser.yaml file with some sane defaults.
-# Make sure to check the documentation at http://goreleaser.com
 before:
   hooks:
-    # You may remove this if you don't use go modules.
     - go mod download
 builds:
   - env:
@@ -12,7 +9,7 @@ builds:
       - windows
       - darwin
     ldflags:
-      - "-s -w -X main.Version={{.Version}} -X main.GitCommit={{.ShortCommit}} -X github.com/launchdarkly/lcg-private/launchdarkly.cmd={{.Version}} -X github.com/launchdarkly/lcg-private/cmd.GitCommit={{.ShortCommit}}"
+      - "-s -w -X main.Version={{.Version}} -X main.GitCommit={{.ShortCommit}} -X github.com/intheclouddan/launchdarkly-code-generator/version.Version={{.Version}}"
     binary: "lcg"
     goarch:
       - amd64
